--- a/package.json
+++ b/package.json
@@ -1,15 +1,48 @@
 {
   "name": "language-algol60",
   "version": "0.4.1",
-  "description": "Algol 60 language support in Atom",
+  "description": "Algol 60 language support in Atom and Visual Studio Code",
   "keywords": [
     "language",
     "grammar"
   ],
+  "categories": [
+    "Programming Languages",
+    "Snippets"
+  ],
   "repository": "https://github.com/TrisTOON/language-algol60",
   "author": "Tristan LE GODAIS",
+  "publisher": "TrisTOON",
   "license": "MIT",
   "engines": {
-    "atom": ">=1.0.0 <2.0.0"
+    "atom": ">=1.0.0 <2.0.0",
+    "vscode": "^1.44.0"
+  },
+  "contributes": {
+    "languages": [
+      {
+        "id": "algol60",
+        "extensions": [
+          ".a60",
+          ".alg",
+          ".algol",
+          ".algol60"
+        ],
+        "configuration": "./settings/language-algol60.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "algol60",
+        "scopeName": "source.algol60",
+        "path": "./grammars/language-algol60.json"
+      }
+    ],
+    "snippets": [
+      {
+        "language": "algol60",
+        "path": "./snippets/language-algol60.json"
+      }
+    ]
   }
 }
