Adds Pulsar to the list of supported engines

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "language-algol60",
   "version": "0.5.2",
-  "description": "Algol 60 language support in Atom and Visual Studio Code",
+  "description": "Algol 60 language support in Atom, Pulsar and Visual Studio Code",
   "keywords": [
     "language",
     "grammar"
@@ -11,11 +11,12 @@
     "Snippets"
   ],
   "repository": "https://github.com/PolariTOON/language-algol60",
-  "author": "Tristan LE GODAIS",
+  "author": "PolariTOON",
   "publisher": "TrisTOON",
   "license": "MIT",
   "engines": {
-    "atom": ">=1.0.0 <2.0.0",
+    "atom": "^1.0.0",
+    "pulsar": "^1.0.0",
     "vscode": "^1.44.0"
   },
   "contributes": {
